--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="main.js"></script>
-    <title>Page Two</title>
+    <title>wAkE uP</title>
 </head>
 <body>
-    <div class='div1'><h1 id="matrix" ></h1></div>
+
+    <div class="divA"><h1 id="warning"></h1></div>
+
+    <div class="divB"><h1 id="cursor"></h1></div>
+    
+    <div class='div1'><h1 id="matrix"></h1></div>
 
     <div class='div2'><h1 id="rabbit"></h1></div>
 
